# ai-agent-creator

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  pytest.ini
app/: manage.py
app/ai_agent_creator/: asgi.py  celery.py  settings.py  sq_lite_signals.py  urls.py  wsgi.py
app/ai_integration/: admin.py  ai_service.py  models.py  tasks.py
app/ai_integration/helpers/: agent_helper.py  ai_agent.py  ai_model_enum.py  db_dict_factory.py  rate_limit.py
app/ai_integration/migrations/: 0001_initial.py
app/github_integration/: apps.py  models.py
app/github_integration/migrations/: 0001_initial.py  0002_repository_github_email_repository_github_username.py
app/schedule_service/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/schedule_service/migrations/: 0001_initial.py
app/tests/: llm_test.py  test.py
infra/nginx/: default.conf_
